# RemoteBackup_Client

./: .gitignore  CMakeLists.txt  main.cpp  newMain.cpp  testMain.cpp
ChecksumAPI/: Checksum.cpp  Checksum.h
ConnectionAPI/: Connection.cpp  Connection.h
FileWatcher/: FileWatcher.cpp  FileWatcher.h
RemoteBackup/: RemoteBackup.cpp  RemoteBackup.h
SocketConnection/: SocketConnection.cpp  SocketConnection.h
